@@ -40,7 +40,12 @@ TEST_STR_MATCH(BASE_URL "http://example.com/")
 TEST_STR_MATCH(FLIES_PATH "flies" )
 TEST_STR_MATCH(FLIES_URL "\${BASE_URL}\${FLIES_PATH}")
 
-## VARIABLE_PARSE_ARGN
+# CMAKE_FEDORA_CONF_GET_ALL_VARIABLES()
+CMAKE_FEDORA_CONF_GET_ALL_VARIABLES()
+MESSAGE("CMAKE_FEDORA_CONF_GET_ALL_VARIABLES:")
+TEST_STR_MATCH(LOCAL_CACHE_DIR "$ENV{HOME}/.cache/cmake-fedora/")
+
+# VARIABLE_PARSE_ARGN
 SET(_valid_options "GITIGNORE" "INCLUDE")
 VARIABLE_PARSE_ARGN(_opt _valid_options "GITIGNORE" ".gitignore" 
     "INCLUDE" ".pot")
