@@ -1,4 +1,4 @@
-* Mon May 05 2014 Ding-Yi Chen <dchen at redhat.com> - 1.4.0
+* Tue May 06 2014 Ding-Yi Chen <dchen at redhat.com> - 1.4.0
 - [TODO] Fix EPEL 7 support.
 - Enhancement:
   + ManageFile: New function: MANAGE_CMAKE_FEDORA_CONF
@@ -6,6 +6,7 @@
   + ManageFile: New function: MANAGE_FILE_EXPIRY
   + ManageFileScript: File function command line interface
   + ManageMessage: New function: M_OUT
+  + ManageVariable: New macro: CMAKE_FEDORA_CONF_GET_ALL_VARIABLES
 - Removed:
   + cmake-fedora.conf.in is no longer need.
 
